--- a/Site.html
+++ b/Site.html
@@ -13,12 +13,13 @@
     <script src="script.js"></script>
   </head>
   <body>
+    
     <div id="header"> 
       <div class="header_menu">
         <img class="imglogo" src="img/Logo.png" >
-        <a href="#" class="header_item">Лекции</a> 
-        <a href="#" class="header_item">Практика</a> 
-        <a href="#" class="header_item">Обратная связь</a>
+        <a href="#FAQ" class="header_item">FAQ</a> 
+        <a href="#feedback" class="header_item">Обратная связь</a> 
+        <a href="#minigame" class="header_item">Мини игра</a>
       </div>
   </div>
 
@@ -37,7 +38,7 @@
     </div>
   </div>  
 
-  <div class="accord">
+  <div class="accord" id="FAQ">
   <div class="accordion" id="accordionPanelsStayOpenExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -100,7 +101,7 @@
   </div>
   </div>
 
-    <div class="tasks">
+    <div class="tasks" id="minigame">
       <ul class="tasks__list">
         <li class="tasks__item" style ="background: green"  >   </li>
         <li class="tasks__item" style ="background: red ">  </li>
