--- a/Site.html
+++ b/Site.html
@@ -41,15 +41,15 @@
   <?php  
    $C=$_GET["C"];
    switch($C){
-    case "1": echo(file_get_contents("faq.html")); break;
-    case "2": echo(file_get_contents("feedback.html")); break;
+    case "1": include(file_get_contents("faq.html")); break;
+    case "2": include(file_get_contents("feedback.html")); break;
   }
   ?>
     
   <?php  
    $O=$_GET["O"];
    switch($O){
-    case "1": echo(file_get_contents("minigame.html")); break;
+    case "1": include(file_get_contents("minigame.html")); break;
   }
   ?>  
      
